fix color contrast of text coordinates

--- a/style.css
+++ b/style.css
@@ -125,3 +125,12 @@ select {
 	height: 200px;
 	filter: grayscale(100%);
 }
+
+.outline-shadow {
+	color: white;
+	text-shadow:
+		-1px -1px 0 #000,
+		1px -1px 0 #000,
+		-1px 1px 0 #000,
+		1px 1px 0 #000;
+}
